--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -15,17 +15,16 @@ a {
 	color: black;
 	text-decoration: none;
 }
-
-.ml5 {
-	margin-left: 5px;
+.font-NotoSans-500 {
+	font-family: 'Noto Sans KR';
+	font-weight: 500;
 }
+.ml5 { margin-left: 5px; }
+.ml10 { margin-left: 10px; }
+.ml15 { margin-left: 15px; }
 
-.ml10 {
-	margin-left: 10px;
-}
-
-.ml15 {
-	margin-left: 15px;
+.bg_black {
+	background-color: #000;
 }
 
 #container {
@@ -33,14 +32,13 @@ a {
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	/* flex는 가로배치 */
 }
 
-#container > header {
+#container > header {	
 	background-color: #a29bfe;
 	display: flex;
-	padding: 10px;
 	height: 70px;
+	padding: 10px;
 }
 
 #container > header > #headerLeft {
@@ -54,7 +52,7 @@ a {
 }
 
 #container > header > #headerRight {
-	padding-left: 20px;
+	padding-right: 50px;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
@@ -62,19 +60,20 @@ a {
 }
 
 #container > header > #headerRight > a {
-	font-size: 1.5em;
 	font-weight: bold;
+	font-size: 1.4em;
 }
 
 #container > section {
 	flex-grow: 1;
+	overflow: auto;
 }
 
 #container > footer {
 	align-items: center;
 	background-color: #636e72;
 	color: white;
-	display: flex;
+	display:flex;
 	height: 50px;
 	justify-content: center;
 	padding: 10px;
@@ -93,20 +92,22 @@ a {
 	border: 1px solid #bdc3c7;
 }
 
+.msg { color: red; }
+
+ .containerPImg {
+	display: inline-block;	
+	width: 30px;
+	height: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 .pImg {
 	object-fit: cover;
 	height: 100%;
 	width: 100%;
 }
 
-#containerPImg {
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-	overflow: hidden;
-}
 
-.msg {
-	color: red;
-}
+
+
